--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,12 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "argon2": "^0.44.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -42,7 +41,7 @@
     "jiti": "^2.6.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
-    "sequelize-cli": "^6.6.3",
+    "prisma": "^6.16.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
