--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "argon2": "^0.44.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/argon2": "^0.14.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
