--- a/server/package.json
+++ b/server/package.json
@@ -45,7 +45,7 @@
     "jiti": "^2.6.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
-    "prisma": "^6.16.2",
+    "prisma": "^6.16.3",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
@@ -54,5 +54,8 @@
   },
   "overrides": {
     "glob": "^9.3.0"
+  },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
   }
 }
